# innkeeper

./: .env.example  .fcignore  .gitignore  CHANGELOG.md  DEMO.md  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml
docs/: BENCH.md  friction-log.md
docs/proof/: DEPLOY_PROOF.md
fixtures/month_07/: ground_truth.json  seed_manifest.json
fixtures/month_07/keys/: README.txt  close_signing.demo.key  close_signing.pub  statement_sealing.demo.key  statement_sealing.pub
fixtures/month_07/ota/: statement_2026-07.sidecar.json
fixtures/month_07/pms/: 2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  2026-07-25.json  2026-07-26.json  2026-07-27.json  2026-07-28.json  2026-07-29.json  2026-07-30.json
fixtures/month_07/processor/: 2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  2026-07-25.json  2026-07-26.json  2026-07-27.json  2026-07-28.json  2026-07-29.json  2026-07-30.json
infra/fc/: PROOF.md  audit_handler.py  s.yaml  wsgi.py
ledger/month_07/closes/: chain.json
ledger/month_07/runs/2026-07-01/: close.json  gate.json  match.json  stats.json  verdicts.json
ledger/month_07/runs/2026-07-02/: close.json  gate.json  match.json  stats.json  verdicts.json
ledger/month_07/runs/2026-07-03/: close.json  gate.json  match.json  stats.json  verdicts.json
ledger/month_07/runs/2026-07-04/: close.json  gate.json  match.json  report.html  (+3 more)
mcp/: README.md  ota_server.py  pms_server.py  processor_server.py
scripts/: bench.py  check_submission_readiness.py  verify_offline.py
site/: CNAME  index.html
site/pitch/: index.html
src/innkeeper_audit/: __init__.py  amounts.py  benchmark.py  cli.py  config.py  crypto.py  matcher.py  pdfgen.py  pipeline.py  policy.py  report.py  schemas.py  seed.py  store.py  verify.py
src/innkeeper_audit/mcp/: __init__.py  server.py  tools.py
src/innkeeper_audit/qwen/: __init__.py  base.py  fake.py  live.py
tests/: conftest.py  test_adjudication.py  test_amounts.py  test_benchmark.py  test_cli.py  test_crypto.py  test_extraction.py  test_invariants.py  test_matcher.py  test_mcp.py  test_pipeline.py  test_policy.py  test_qwen_live.py  test_report_and_verify.py  test_schemas.py  test_seed_determinism.py
(+252 files in other folders)
