[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "innkeeper-audit"
version = "1.2.0"
description = "Autopilot night audit for small hotels: three-way reconciliation, evidence-cited verdicts, expected-loss policy gate, Ed25519-signed Merkle night closes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Edy Cu" }]
keywords = ["reconciliation", "night-audit", "mcp", "qwen", "merkle", "hotel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "typer>=0.16",
    "pydantic>=2.7",
    "pynacl>=1.5",
    "reportlab>=4.1",
]

[project.optional-dependencies]
release = ["python-semantic-release>=9,<11"]
live = [
    # LiveQwen transport (DashScope OpenAI-compatible mode) + PDF page rasterizer.
    "openai>=1.40",
    "pypdfium2>=4.30",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pypdf>=4.2",
    "ruff>=0.15",
    "mypy>=2.1",
    "pip-audit>=2.7",
]

[project.scripts]
innkeeper = "innkeeper_audit.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["*.egg-info", ".venv", "build", "dist"]

[tool.ruff.lint]
# Ruff defaults (E4, E7, E9, F) plus explicit ignores — kept intentionally
# narrow rather than opting into the full pycodestyle/isort rule families,
# which would require a large reflow of already-reviewed source/test files.
ignore = [
    "E741", # ambiguous variable name — pervasive `l` (line) locals in tests/seed data, not worth the churn
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["build", "dist", ".venv", "tests"]
warn_unused_ignores = false


# ---------------------------------------------------------------------------
# Automatic semantic versioning, driven by Conventional Commits in THIS repo.
# This build/ folder is its own isolated git repo (no remote, not the monorepo).
#   fix:  -> patch   feat: -> minor   feat!/BREAKING CHANGE: -> major
# Bump locally with:  ./.venv/bin/semantic-release version
# (config is local-only: it commits + tags in this repo but never pushes.)
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/innkeeper_audit/__init__.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
allow_zero_version = true
major_on_zero = false
build_command = ""

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.publish]
upload_to_vcs_release = false
